--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,3 +6,6 @@
 @import './layout/navbar';
 @import './layout/sidebar';
 @import './layout/layout';
+
+@import './components/channel_item';
+@import './components/stream_item';
