--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,3 +9,5 @@
 
 @import './components/channel_item';
 @import './components/stream_item';
+@import './components/games_item';
+@import './components/categories_buttons';
