--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,3 +11,4 @@
 @import './components/stream_item';
 @import './components/games_item';
 @import './components/categories_buttons';
+@import './components/stream_carrousel';
