--- a/src/styles/utilities/_varialbles.scss
+++ b/src/styles/utilities/_varialbles.scss
@@ -6,4 +6,6 @@ $bg-nav: #18181b;
 $height-nav: 50px;
 
 $bg-sidebar: #1f1f23;
-$weight-sidebar: 239px;
+
+$width-sidebar: 239px;
+$width-sidebar-collapse: 60px;
