--- a/src/styles/layout/_sidebar.scss
+++ b/src/styles/layout/_sidebar.scss
@@ -1,6 +1,6 @@
 #sidebar {
     background: $bg-sidebar;
-    width: $weight-sidebar;
+    width: $width-sidebar;
     height: calc(100vh - $height-nav);
 
     padding: 10px;
@@ -9,9 +9,10 @@
         &__header {
             display: flex;
             justify-content: space-between;
+            align-items: center;
 
             h2 {
-                font-size: 14px;
+                font-size: 13px;
                 font-weight: bold;
                 margin: 0;
                 text-transform: uppercase;
@@ -22,10 +23,63 @@
                 border: none;
                 color: #fff;
                 background: transparent;
+                padding: 5px;
+                border-radius: 8px;
 
                 img {
                     width: 20px;
                     height: 20px;
+                }
+
+                &:hover {
+                    background: rgba(255, 255, 255, 0.39);
+                }
+            }
+        }
+    }
+
+    .channel {
+        &__item {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            margin-top: 15px;
+
+            img {
+                border-radius: 50%;
+                height: 30px;
+                width: 30px;
+            }
+
+            &--info {
+                text-align: start;
+                flex-grow: 1;
+                > span {
+                    display: block;
+
+                    &:nth-child(1) {
+                        font-size: 15px;
+                        font-weight: bold;
+                    }
+
+                    &:nth-child(2) {
+                        font-size: 14px;
+                        white-space: nowrap;
+                        text-overflow: ellipsis;
+                        overflow: hidden;
+                        width: 100px;
+                    }
+                }
+            }
+
+            &--views {
+                text-align: end;
+
+                &::before {
+                    content: '•';
+                    margin-right: 5px;
+                    color: red;
+                    font-size: 25px;
                 }
             }
         }
