--- a/src/styles/layout/_sidebar.scss
+++ b/src/styles/layout/_sidebar.scss
@@ -46,6 +46,9 @@
             margin-top: 15px;
             cursor: pointer;
 
+            text-decoration: unset;
+            color: #fff;
+
             img {
                 border-radius: 50%;
                 height: 30px;
