--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,3 +11,5 @@
 @import './components/games_item';
 @import './components/categories_buttons';
 @import './components/stream_carrousel';
+
+@import './pages/stream_page';
