--- a/src/styles/layout/_navbar.scss
+++ b/src/styles/layout/_navbar.scss
@@ -7,9 +7,13 @@
 
     padding: 0 20px;
 
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+
     a {
         font-weight: bold;
         font-size: 18px;
+        text-decoration: none;
+        color: #fff;
     }
 
     button[class*='btn-'] {
