--- a/src/styles/layout/_sidebar.scss
+++ b/src/styles/layout/_sidebar.scss
@@ -36,6 +36,10 @@
                 }
             }
         }
+
+        &__channels {
+            list-style: none;
+        }
     }
 
     .channel {
@@ -72,18 +76,24 @@
                         text-overflow: ellipsis;
                         overflow: hidden;
                         width: 100px;
+                        color: #a6a6b1;
                     }
                 }
             }
 
             &--views {
-                text-align: end;
+                display: flex;
+                align-items: center;
+                gap: 10px;
+                font-size: 15px;
 
                 &::before {
-                    content: '•';
-                    margin-right: 5px;
-                    color: red;
-                    font-size: 25px;
+                    content: '';
+                    display: block;
+                    height: 10px;
+                    width: 10px;
+                    background: red;
+                    border-radius: 50%;
                 }
             }
 
