--- a/src/styles/base/_app.scss
+++ b/src/styles/base/_app.scss
@@ -1,5 +1,5 @@
 #app {
-    font-family: Avenir, Helvetica, Arial, sans-serif;
+    font-family: Inter, Helvetica, Arial, sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     color: #fff;
