--- a/src/styles/components/_stream_item.scss
+++ b/src/styles/components/_stream_item.scss
@@ -14,6 +14,7 @@
 
         &--thumbnail {
             position: relative;
+            font-size: 15px;
 
             span {
                 position: absolute;
@@ -50,13 +51,11 @@
 
         &--info {
             display: flex;
-
             gap: 10px;
+            margin-top: 10px;
 
             img {
                 border-radius: 50%;
-                height: 30px;
-                width: 30px;
             }
 
             p {
@@ -64,8 +63,11 @@
                 text-overflow: ellipsis;
                 overflow: hidden;
                 white-space: nowrap;
+                color: #a6a6b1;
+                font-size: 15px;
 
                 &:nth-child(1) {
+                    color: inherit;
                     font-weight: bold;
                 }
             }
